Strip unneeded paths from the slow-report trace produced by memlog.

This CL is adding a ExportParam flags to turn on/off stripping strings
from memory dumps automatically uploaded by memlog.

R=erikchen@chromium.org
Bug: 778309
Change-Id: I0074d4158f88dd3fd34474b10c432e76e23f30ad